--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <!-- Font Awesome 
-      
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous"> -->
 
     <script src="https://kit.fontawesome.com/405d681d9c.js" crossorigin="anonymous"></script>
@@ -22,11 +22,47 @@
     <!-- Estilo customizado -->
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
+    <link rel="shortcut icon" href="IMG/favicon.png" type="image/x-icon">
     <title>Música para todos - Spotify</title>
   </head>
   <body>
     
-    <h1>Olá, mundo!</h1>
+    <header>
+      <nav class="navbar navbar-expand-md navbar-light fixed-top bg-warning">
+        <div class="container">
+          <a href="#" class="navbar-brand">
+            <img src="IMG/spotify.svg" width="142" alt="">
+          </a>
+
+          <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
+            <i class="fa-solid fa-bars text-white"></i>
+          </button>
+
+          <div class="collapse navbar-collapse" id="nav-principal">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="">Premium</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="">Ajuda</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="">Baixar</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="">Inscrever-se</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="">Entrar</a>
+              </li>
+            </ul>
+          </div>
+
+        </div>
+      </nav>
+    </header>
+
+    <h1>conteudo</h1>
 
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
