--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body>
     
     <header>
-      <nav class="navbar navbar-expand-md navbar-light fixed-top bg-warning">
+      <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-transparente">
         <div class="container">
           <a href="#" class="navbar-brand">
             <img src="IMG/spotify.svg" width="142" alt="">
@@ -49,6 +49,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="">Baixar</a>
               </li>
+              <li class="nav-item divisor">
+
+              </li>
               <li class="nav-item">
                 <a class="nav-link" href="">Inscrever-se</a>
               </li>
@@ -62,7 +65,18 @@
       </nav>
     </header>
 
-    <h1>conteudo</h1>
+    <section id="home" class="d-flex">
+      <div class="container align-self-center">
+        <div class="row">
+          <div class="col-md-12 capa">
+            <h1>Música para todos</h1>
+            <a href="" class="btn btn-custom btn-lg btn-roxo">Aproveite o Spotify FREE</a>
+            <a href="" class="btn btn-custom btn-lg btn-branco">Aproveite o Spotify PREMIUM</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
 
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
